--- a/{{cookiecutter.project_name}}/.vscode/settings.json
+++ b/{{cookiecutter.project_name}}/.vscode/settings.json
@@ -4,7 +4,6 @@
             "source.organizeImports": true
         }
     },
-    "autoDocstring.docstringFormat": "numpy",
     "editor.formatOnSave": true,
     "editor.rulers": [
         88
@@ -21,18 +20,9 @@
     "nixEnvSelector.nixFile": "${workspaceFolder}/shell.nix",
     "nixEnvSelector.suggestion": true,
     "python.analysis.typeCheckingMode": "basic",
-    "python.defaultInterpreterPath": "./.venv/bin/python",
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "python.envFile": "${workspaceFolder}/.env",
     "python.formatting.provider": "black",
-    "python.linting.banditArgs": [
-        "--ignore=B101"
-    ],
-    "python.linting.banditEnabled": true,
-    "python.testing.pytestArgs": [
-        "test"
-    ],
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
     "terminal.integrated.env.linux": {
         "PYTHONPATH": "${workspaceFolder}"
     },
