feat(justfile): add dependencies update commands

--- a/{{cookiecutter.project_name}}/justfile
+++ b/{{cookiecutter.project_name}}/justfile
@@ -8,3 +8,9 @@ format-notebooks target=NOTEBOOK_TARGET:
 lint-notebooks target=NOTEBOOK_TARGET:
     nbqa ruff {{target}} --fix || true
 {% endraw %}
+
+update-nix-dependencies:
+    niv update
+
+update-python-dependencies:
+    poetry update
